Massive changes to classification, up to 75% accuracy. Datastore changed to work on the users id. System now fully user independent. Updates to templates. Styles changes. Automated Generations finished and working at a rather slow rate, need a progress bar.

--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -55,6 +55,10 @@
     margin-bottom: 10px;
 }
 
+.form-error {
+    color: darkred;
+}
+
 #diversify {
     background-image: url("/DRAG/static/images/code.jpg")
 }
@@ -128,12 +132,21 @@ form .form-element {
     box-shadow: none;
 }
 
+figure {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.figure-caption {
+    margin-top: 3%;
+}
+
 @media only screen and (max-width: 800px) {
     .about-section img {
         margin-bottom: 20px;
     }
 
-    #forms-diversify, #index-body, #about {
+    #forms-diversify, #index-body, #about, #faq {
         padding: 20px;
     }
 
