--- a/DRAGProj/templates/DRAG/faq.html
+++ b/DRAGProj/templates/DRAG/faq.html
@@ -65,6 +65,19 @@
                         </li>
                     </ul>
                     </p>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <figure>
+                                <img src="/DRAG/static/images/adaptation.jpg" style="margin: auto;"
+                                     class="figure-img img-fluid">
+                                <figcaption class="figure-caption">Fig.1. The book "Adaptation in Natural and
+                                    Artificial Systems" by John Holland, inventor of the GA.
+                                    Taken from:
+                                    https://www.goodreads.com/book/show/881526.Adaptation_in_Natural_and_Artificial_Systems
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
                 </article>
                 <article class="faq-article" id="two">
                     <h2>2. How does it work?</h2>
@@ -84,8 +97,8 @@
                         Once the population has been evaluated, selection is performed using a selection algorithm.
                         This selection of candidates decides which candidates will propagate to the next generation.
                         This is done based on fitness value, with some allowance for less fitter candidates to be
-                        chosen to maintain diversity. Selection is usually performed without replacement for a
-                        number of times equal to the population size.
+                        chosen to maintain diversity in the population. Selection is usually performed without
+                        replacement for a number of times equal to the population size.
                         <br/><br/>
                         Selected candidates are then subjected to genetic operators, namely crossover and mutation.
                         Crossover simulates fusion of haploid genes in reproduction and mutation simulates random
@@ -113,6 +126,19 @@
                         function that a human brain creates when listening to their favourite music. More fascinating
                         information about the human brain's response to music can be found in this
                         <a href="http://www.pnas.org/content/98/20/11818?tab=author-info" target="_blank">paper</a>.
+                        <div class="row">
+                            <div class="col-md-12">
+                                <figure>
+                                    <img src="/DRAG/static/images/musicbrain.jpg" style="margin: auto;"
+                                         class="figure-img img-fluid">
+                                    <figcaption class="figure-caption">Fig.2. The effects of listening to and playing music
+                                        on different parts of the brain.
+                                        Taken from:
+                                        https://www.tes.com/lessons/gOYcmFll4oE1cQ/music-and-the-human-brain
+                                    </figcaption>
+                                </figure>
+                            </div>
+                        </div>
                     </p>
                 </article>
                 <article class="faq-article" id="four">
