--- a/DRAGProj/templates/DRAG/menu.html
+++ b/DRAGProj/templates/DRAG/menu.html
@@ -17,10 +17,10 @@
                         <a class="nav-link smooth" href="#footer">Footer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="/About">About</a>
+                        <a class="nav-link" href="/About">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="/FAQ">FAQ</a>
+                        <a class="nav-link" href="/FAQ">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +43,10 @@
                         <a class="nav-link smooth" href="#footer">Footer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth" href="/About">About</a>
+                        <a class="nav-link" href="/About">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/FAQ">FAQ</a>
                     </li>
                 </ul>
             </div>
