Finished getting automated run process to work. Need some style changes to last few screens. Also, pictures or facts while rating and get loading game to work. Template changes needed to get things working.

--- a/DRAGNN/templates/DRAGNN/finish.html
+++ b/DRAGNN/templates/DRAGNN/finish.html
@@ -17,5 +17,6 @@
         {% block bodyscripts %}
             {% include "DRAG/bodyscripts.html" %}
         {% endblock %}
+        <script src="{% static "js/keybindings.js" %}"></script>
     </body>
 </html>
