--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -42,7 +42,7 @@
     padding-bottom: 60px;
 }
 
-#fitnessform {
+#fitnessform, #finished {
     padding: 20px;
 }
 
@@ -139,6 +139,24 @@ figure {
 
 .figure-caption {
     margin-top: 3%;
+}
+
+#learning {
+    padding: 30px;
+}
+
+#machinelearning form {
+    margin-top: 50px;
+}
+
+#machinelearning form button {
+    min-height: 200px;
+    min-width: 200px;
+}
+
+#machinelearning canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
 }
 
 @media only screen and (max-width: 800px) {
