--- a/DRAGNN/templates/DRAGNN/finishbody.html
+++ b/DRAGNN/templates/DRAGNN/finishbody.html
@@ -3,17 +3,19 @@
     <section id="finished">
         <h1>Congratulations - You have finished a diversification run!</h1>
         <p>
-            <strong>Generations: </strong> {{ automaticgenerations|add:manualgenerations }} <br/>
+            <strong>Generations: </strong> {{ automated_generations|add:manual_generations }} <br/>
             Enjoy your reward! A set of tracks diversified to your taste.
         </p>
-        {% for track in population %}
-            <div class="col-md-3">
-                <h5>Track {{ forloop.counter }}:</h5>
-                <audio id="{{ "track"|str_concat:forloop.counter0 }}" class="track" controls>
-                    <source src="{{ "/DRAG/static/wavfiles/"|str_concat:request.session.user_id|str_concat:"candidate"|str_concat:forloop.counter0|str_concat:".wav" }}"
-                            type="audio/wav">
-                </audio>
-            </div>
-        {% endfor %}
+        <div class="row">
+            {% for track in population_range %}
+                <div class="col-md-3">
+                    <h5>Track {{ forloop.counter }}:</h5>
+                    <audio id="{{ "track"|str_concat:forloop.counter0 }}" class="track" controls>
+                        <source src="{{ "/DRAG/static/wavfiles/"|str_concat:request.session.user_id|str_concat:"candidate"|str_concat:forloop.counter0|str_concat:".wav" }}"
+                                type="audio/wav">
+                    </audio>
+                </div>
+            {% endfor %}
+        </div>
     </section>
 {% endblock content %}
