Got the game working, did a load of experiments with varying parameters. Templates altered for style.

--- a/DRAGNN/templates/DRAGNN/finishbody.html
+++ b/DRAGNN/templates/DRAGNN/finishbody.html
@@ -17,5 +17,6 @@
                 </div>
             {% endfor %}
         </div>
+        <img class="img-fluid" src="/DRAG/static/images/finish.jpg" alt="You have finished!">
     </section>
 {% endblock content %}
