--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -145,6 +145,14 @@ figure {
     padding: 30px;
 }
 
+#learning #game-area {
+    max-width: 100%;
+}
+
+#machinelearning {
+    padding-top: 130px;
+}
+
 #machinelearning form {
     margin-top: 50px;
 }
@@ -154,9 +162,11 @@ figure {
     min-width: 200px;
 }
 
-#machinelearning canvas {
-    border:1px solid #d3d3d3;
-    background-color: #f1f1f1;
+#finished img {
+    margin-left: 25%;
+    margin-right: auto;
+    max-width: 50%;
+    margin-top: 80px;
 }
 
 @media only screen and (max-width: 800px) {
