--- a/DRAGProj/templates/DRAG/500.html
+++ b/DRAGProj/templates/DRAG/500.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>DRAG - Server Error</title>
+        {% block resources %} {% include 'DRAG/renderresources.html' %} {% endblock %}
     </head>
     <body>
         {% block content %}
