Finished possible unit tests, integrity tests next to test all the other functionality.

--- a/DRAGNN/templates/DRAGNN/mlmodal.html
+++ b/DRAGNN/templates/DRAGNN/mlmodal.html
@@ -1,6 +1,6 @@
 {% block modal %}
     {% load static %}
-    <div id="learning" style="display:none;">
+    <div id="learning" style="display:none; width: 100%; height: 100%">
         <p>
             Learning how you rated tracks... this will only take a few minutes. Please enjoy this game while
             you wait.
