--- a/DRAG/static/styles/styles.css
+++ b/DRAG/static/styles/styles.css
@@ -183,8 +183,16 @@ figure {
     }
 }
 
+@media screen and (max-width: 1100px){
+  #fitnessform .collapse-under {
+    display:block;
+    width:100%;
+  }
+}
+
 @media only screen and (min-width: 800px) {
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 1.5rem;
     }
 }
+
